--- a/style.css
+++ b/style.css
@@ -7,15 +7,17 @@ body{
   background-color: #7bed9f;
   padding: 10px 10px 80px;
   display: flex;
-  justify-content: space-between;
+  justify-content:space-around;
 }
 
 .poster{
   background-color: white;
-  width: 45%;
+  width: 200px;
+  height: auto;
   padding: 10px;
   text-align: center;
   border-radius: 7px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
 
 .image-div img{
@@ -90,4 +92,20 @@ body{
 .tooltip:hover .tooltip-text{
   visibility: visible;
 }
+
+@media only screen   
+and (min-device-width : 360px)   
+and (max-device-width : 640px) {
+  .poster{
+    width: 40%;
+    height: auto;
+
+    
+  }
+}
+
+
+
+
+
 
