fixed watch later button

--- a/style.css
+++ b/style.css
@@ -96,11 +96,22 @@ body{
 @media only screen   
 and (min-device-width : 360px)   
 and (max-device-width : 640px) {
-  .poster{
-    width: 40%;
+  .main .poster{
+    width: 42%;
     height: auto;
+  }
+  .button button:hover{
+    letter-spacing: 1.5px;
+    background-color: black;
+    color: #7bed9f;
+  }
+  .button button{
+    font-size: 11px ;
 
-    
+  }
+
+  .main{
+    padding: 10px 3px 200px;
   }
 }
 
