--- a/style.css
+++ b/style.css
@@ -368,7 +368,8 @@ div.navbar{
 }
 
 .content2{
-  margin-bottom: 150%;
+  font-family: poppins;
+  margin-bottom: 150px;
   overflow: hidden;
   background-color: rgba(0, 184, 148,0.3);
 }
@@ -378,6 +379,7 @@ div.navbar{
 }
 
 .contact-list{
+  position: relative;
   padding: 10px 10px 0 10px;
   margin: 10px;
   height: auto;
@@ -386,19 +388,97 @@ div.navbar{
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
+.contact-list .name{
+  color: white;
+  font-weight: bold;
+}
+
+.contact-list .para{
+  margin-bottom: 50px;
+}
 .contact-list:hover{
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .contact-btn{
-  display: flex;
-  margin: 10px auto;
-  justify-content: center;
-  align-items: center;
-  background-color:rgba(41, 128, 185,1) ;
+  position: absolute;
+  background-color:rgba(41, 128, 185,0.7) ;
   color: white;
   border: none;
   border-radius: 20px;
   padding: 10px;
-  bottom: 0;
+  bottom: 10px;
+  text-align: center;
+  min-width: 90%;
+  margin: auto;
+  font-family: poppins;
+  transform: translateX(6px);
+  transition: 0.3s;
+}
+
+.contact-btn:hover{
+  background-color:rgba(41, 128, 185,1) ;
+}
+
+@media only screen and (max-width:800px){
+  .content-element{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .contact-list{
+    max-width: 300px;
+    max-height: 600px;
+    margin: auto;
+    margin-bottom: 20px;
+  }
+
+  .content2 img{
+    width: 100%;
+    height: 50vw;
+  }
+    
+  
+}
+
+/*----------footer------*/
+
+
+.footer{
+  display: flex;
+  justify-content:left;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100px;
+  background-color: rgba(116, 185, 255,1.0);
+  font-family: poppins;
+}
+
+.lorem{
+  width: 33.33%;
+}
+
+.foot-para{
+  overflow: hidden;
+  text-align:left;
+  font-size: 10px;
+  padding: 0 0 0 2px;
+}
+
+.copyrights{
+  margin: -10px 0 0 0;
+  font-family: poppins;
+  font-weight: bold;
+  padding: 2px 0 0 2px;
+}
+
+.footer .contact-us button{
+  background-color:rgba(41, 128, 185,1) ;
+  padding: 10px;
+  border: none;
+  border-radius: 30px;
+  padding: 10px;
+  
+  
 }
