--- a/style.css
+++ b/style.css
@@ -1,42 +1,44 @@
-*{
+* {
   box-sizing: border-box;
 }
 
-body{
+body {
   margin: 0;
   padding: 0;
   background: url(background1.jpg);
-  background-size:cover;
+  background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
 }
 
-:root{
+:root {
   --color-black: black;
   --color-red: red;
-  --color-white:white;
-  --hover-red:rgba(231, 76, 60,1.0)
+  --color-white: white;
+  --hover-red: rgba(231, 76, 60, 1);
 }
 
-header{
+header {
   display: flex;
   justify-content: flex-end;
   align-items: center;
   margin-top: 5px;
-  
 }
 
-.logo, .navbar, .btn{
-  font-family: 'Bebas Neue', cursive;
+.logo,
+.navbar,
+.btn {
+  font-family: "Bebas Neue", cursive;
 }
 
-header a.logo{
+header a.logo {
   margin-right: auto;
 }
 
-.logo, .redweb{
-  font-family: 'Teko', sans-serif;
+.logo,
+.redweb {
+  font-family: "Teko", sans-serif;
   font-weight: bold;
   text-decoration: none;
   font-size: 30px;
@@ -46,17 +48,17 @@ header a.logo{
   padding: 0;
 }
 
-.redweb{
+.redweb {
   color: var(--color-red);
   margin: 0;
 }
 
-div.navbar{
+div.navbar {
   margin: 0;
   padding: 0;
 }
 
-.navbar ul{
+.navbar ul {
   display: flex;
   justify-content: flex-end;
   list-style-type: none;
@@ -65,32 +67,30 @@ div.navbar{
   margin-top: -2px;
 }
 
-.navbar ul li{
+.navbar ul li {
   display: inline-block;
   margin: 0;
   padding: 0;
   position: relative;
 }
 
-.navbar ul li a{
+.navbar ul li a {
   text-decoration: none;
   color: var(--color-white);
   font-size: 20px;
   margin-right: 25px;
-  
 }
 
-.navbar .active{
+.navbar .active {
   color: var(--color-red);
 }
 
-.navbar ul li a:hover{
+.navbar ul li a:hover {
   color: grey;
   transition: 0.3s;
 }
 
-
-.navbar li::after{
+.navbar li::after {
   top: 85%;
   margin: auto;
   display: block;
@@ -102,16 +102,13 @@ div.navbar{
   display: block;
   overflow: hidden;
   transition: 0.5s;
-  
 }
 
-.navbar li:hover::after{
+.navbar li:hover::after {
   width: 70%;
-  ;
-
 }
 
-.navbar li::before{
+.navbar li::before {
   margin: auto;
   display: block;
   position: absolute;
@@ -122,17 +119,14 @@ div.navbar{
   display: block;
   margin-right: 10px;
   overflow: hidden;
-  transition:0.3s;
-  
+  transition: 0.3s;
 }
 
-.navbar li:hover::before{
+.navbar li:hover::before {
   width: 50%;
-  
 }
 
-
-.btn{
+.btn {
   margin: 0;
   padding: 0;
   margin-left: 25px;
@@ -140,7 +134,7 @@ div.navbar{
   margin-bottom: 5px;
 }
 
-.btn a{
+.btn a {
   text-decoration: none;
   color: var(--color-white);
   font-size: 18px;
@@ -149,22 +143,22 @@ div.navbar{
   padding: 2px;
 }
 
-.btn a:hover{
+.btn a:hover {
   color: grey;
   border: 2px solid grey;
   transition: 0.5s;
 }
 
-@media only screen and (max-width:480px){
-  header a.logo, header a.redweb{
+@media only screen and (max-width: 480px) {
+  header a.logo,
+  header a.redweb {
     font-size: 10px;
   }
 }
 
 /*--------form-----------*/
 
-.main-form{
-  
+.main-form {
   border-radius: 10px;
   margin: 100px auto;
   width: 40%;
@@ -173,23 +167,24 @@ div.navbar{
   justify-content: center;
   display: flex;
   flex-direction: column;
-  background-color:rgba(236, 240, 241,0.3) ;
+  background-color: rgba(236, 240, 241, 0.3);
 }
 
-.header h1{
+.header h1 {
   font-size: 20px;
-  color: rgba(44, 62, 80,1.0);
+  color: rgba(44, 62, 80, 1);
   display: flex;
   justify-content: center;
 }
 
 @media only screen and (max-width: 495px) {
-  .header h1{
+  .header h1 {
     font-size: 13px;
   }
 }
 
-.input, #check{
+.input,
+#check {
   width: 95%;
   background-color: transparent;
   border-radius: 15px;
@@ -199,12 +194,10 @@ div.navbar{
   justify-content: center;
   transform: translateX(8px);
   padding: 0 0 0 10px;
-  
 }
 
-
-.label-name{
-  color: rgba(44, 62, 80,1.0);
+.label-name {
+  color: rgba(44, 62, 80, 1);
   margin: 0;
   padding: 0;
   display: block;
@@ -213,76 +206,72 @@ div.navbar{
   transform: translateX(8px);
 }
 
-
-.conteiner .form{
+.conteiner .form {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  
 }
 
-.button .input-btn{
+.button .input-btn {
   width: 95%;
   border-radius: 15px;
-  background-color: rgba(22, 160, 133,0.3);
+  background-color: rgba(22, 160, 133, 0.3);
   text-transform: uppercase;
   font-family: poppins;
   transform: translateX(8px);
   margin-top: 10px;
   transition: 0.3s;
-
 }
 
-.button .input-btn:hover{
-  background-color: rgba(22, 160, 133,0.5);
+.button .input-btn:hover {
+  background-color: rgba(22, 160, 133, 0.5);
 }
 
-.bottom{
+.bottom {
   display: flex;
   justify-content: space-between;
   font-size: 13px;
   margin: 15px 10px;
   align-items: center;
-  color: rgba(44, 62, 80,1.0);
+  color: rgba(44, 62, 80, 1);
 }
 
-.bottom a{
+.bottom a {
   text-decoration: none;
-  color: rgba(44, 62, 80,1.0);
+  color: rgba(44, 62, 80, 1);
 }
 
-.bottom .checkbox-btn{
+.bottom .checkbox-btn {
   margin: 0;
   padding: 0;
   transform: translateY(3px);
-  
 }
 @media only screen and (max-width: 780px) {
-  .bottom{
+  .bottom {
     font-size: 12px;
   }
-  .main-form{
+  .main-form {
     width: 55%;
   }
 }
 
 @media only screen and (max-width: 510px) {
-  .bottom{
+  .bottom {
     font-size: 12px;
   }
-  .main-form{
+  .main-form {
     width: 55%;
   }
 }
 
-::-webkit-input-placeholder{
+::-webkit-input-placeholder {
   color: orangered;
 }
 
-.check select{
+.check select {
   -webkit-appearance: none;
   -moz-appearance: none;
-  -ms-appearance:none;
+  -ms-appearance: none;
   appearance: none;
   outline: 0;
   box-shadow: none;
@@ -291,9 +280,8 @@ div.navbar{
   background-image: none;
 }
 
-
-.content-cover{
-  background-color: rgba(41, 128, 185,0.1);
+.content-cover {
+  background-color: rgba(41, 128, 185, 0.1);
   width: 100%;
   margin: 0;
   padding: 0 0 20px 0;
@@ -301,184 +289,106 @@ div.navbar{
   margin-bottom: 150px;
 }
 
-.content-cover .title{
+.content-cover .title {
   display: block;
   text-align: center;
 }
 
-.content-div{
+.content-div {
   display: flex;
-
 }
 
-.cover{
+.cover {
   width: 33%;
-  background-color: rgba(41, 128, 185,0.4);
+  background-color: rgba(41, 128, 185, 0.4);
   margin: 0 10px;
   display: flex;
   flex-direction: column;
-  
+
   align-items: center;
   border-radius: 5px;
   height: auto;
   padding: 10px;
 }
 
+.position {
+  position: relative;
+}
 
-.cover img{
+.cover img {
   width: 95%;
   border-radius: 3px;
 }
 
-.cover:hover{
+.cover:hover {
   cursor: pointer;
-  box-shadow:  rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
   transition: 0.3s;
-  background-color:rgba(41, 128, 185,0.6);
+  background-color: rgba(41, 128, 185, 0.6);
 }
 
-.cover img:hover{
+.cover img:hover {
   filter: grayscale(60%);
   cursor: pointer;
 }
 
-.cover1 .middel{
+.middel {
   position: absolute;
-  transform: translateY(110px);
-  color: red;
-
+  top: 50%;
+  left: 50%;
+  margin: 0;
+  transform: translate(-50%, -50%);
+  font-size: 25px;
+  color: #ffffff;
 }
 
 /*-------------content 2--------------*/
 
-.content-element{
+.content-element {
   display: flex;
   flex-direction: row;
-  align-items:stretch;
+  align-items: stretch;
   margin: 0 5px;
   justify-content: space-between;
 }
 
-.content2 img{
+.content2 img {
   width: 100%;
   height: 20vw;
   border-radius: 10px;
-  
-  
 }
 
-.content2{
-  font-family: poppins;
-  margin-bottom: 150px;
+.content2 {
+  margin-bottom: 150%;
   overflow: hidden;
-  background-color: rgba(0, 184, 148,0.3);
+  background-color: rgba(0, 184, 148, 0.3);
 }
-.content2 h2{
+.content2 h2 {
   text-align: center;
-
 }
 
-.contact-list{
-  position: relative;
+.contact-list {
   padding: 10px 10px 0 10px;
   margin: 10px;
   height: auto;
-  background-color: rgba(0, 184, 148,0.8);
+  background-color: rgba(0, 184, 148, 0.8);
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
-.contact-list .name{
-  color: white;
-  font-weight: bold;
-}
-
-.contact-list .para{
-  margin-bottom: 50px;
-}
-.contact-list:hover{
+.contact-list:hover {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.contact-btn{
-  position: absolute;
-  background-color:rgba(41, 128, 185,0.7) ;
+.contact-btn {
+  display: flex;
+  margin: 10px auto;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(41, 128, 185, 1);
   color: white;
   border: none;
   border-radius: 20px;
   padding: 10px;
-  bottom: 10px;
-  text-align: center;
-  min-width: 90%;
-  margin: auto;
-  font-family: poppins;
-  transform: translateX(6px);
-  transition: 0.3s;
-}
-
-.contact-btn:hover{
-  background-color:rgba(41, 128, 185,1) ;
-}
-
-@media only screen and (max-width:800px){
-  .content-element{
-    display: flex;
-    flex-direction: column;
-  }
-
-  .contact-list{
-    max-width: 300px;
-    max-height: 600px;
-    margin: auto;
-    margin-bottom: 20px;
-  }
-
-  .content2 img{
-    width: 100%;
-    height: 50vw;
-  }
-    
-  
-}
-
-/*----------footer------*/
-
-
-.footer{
-  display: flex;
-  justify-content:left;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  height: 100px;
-  background-color: rgba(116, 185, 255,1.0);
-  font-family: poppins;
-}
-
-.lorem{
-  width: 33.33%;
-}
-
-.foot-para{
-  overflow: hidden;
-  text-align:left;
-  font-size: 10px;
-  padding: 0 0 0 2px;
-}
-
-.copyrights{
-  margin: -10px 0 0 0;
-  font-family: poppins;
-  font-weight: bold;
-  padding: 2px 0 0 2px;
-}
-
-.footer .contact-us button{
-  background-color:rgba(41, 128, 185,1) ;
-  padding: 10px;
-  border: none;
-  border-radius: 30px;
-  padding: 10px;
-  
-  
+  bottom: 0;
 }
